# dsm2-calsim-analysis

./: .gitignore  README.md  environment.yml  pyproject.toml
dsm2_calsim_analysis/: __init__.py  cli.py
dsm2_calsim_analysis/data/info/: DSM2_ec_vernalis_loc.csv
dsm2_calsim_analysis/nbplot/: calsim_dsm2_analysis.py  ipw_mixins.py  plotly.py  setup.py
dsm2_calsim_analysis/utilities/: utilities.py
examples/calsim_dsm2_analysis/: config_ec_ag_west.yaml  config_ec_vernalis.yaml  ec_analysis.py
